--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -15,7 +15,7 @@
     "quickLinks": "Quick Links",
     "legal": "Legal",
     "resources": "Resources",
-    "description": "Upstart is a San Francisco-based design and technology company founded in 2016. Their mission is to democratize design by making professional branding tools accessible to everyone.",
+    "description": "Custom website development and AI-powered workflow automation in Switzerland.",
     "copyright": "Copyright {{ year }} / All Rights Reserved By Upstart / Built with love using [Astro Themes](https://getastrothemes.com/)",
     "_comment": "We kindly appreciate it if you retain the theme copyright. Thank you for supporting Getastrothemes!"
   }
