--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -15,7 +15,7 @@
     "quickLinks": "Liens",
     "legal": "Juridique",
     "resources": "Ressources",
-    "description": "Upstart est une entreprise de design et de technologie basée à San Francisco, fondée en 2016. Leur mission est de démocratiser le design en rendant les outils de branding professionnels accessibles à tous.",
+    "description": "Custom website development and AI-powered workflow automation in Switzerland.",
     "copyright": "Droits d'auteur {{ year }} / Tous droits réservés par Upstart / Construit avec amour [Astro Themes](https://getastrothemes.com/)",
     "_comment": "We kindly appreciate it if you retain the theme copyright. Thank you for supporting Getastrothemes!"
   }
