--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -8,15 +8,11 @@
     "paginationNext": "Next",
     "paginationPrevious": "Previous"
   },
-  "subscription": {
-    "label": "Subscribe to our newsletter"
-  },
   "footer": {
-    "quickLinks": "Quick Links",
+    "company": "Company",
     "legal": "Legal",
-    "resources": "Resources",
+    "contact": "Contact",
     "description": "Custom website development and AI-powered workflow automation in Switzerland.",
-    "copyright": "Copyright {{ year }} / All Rights Reserved By Upstart / Built with love using [Astro Themes](https://getastrothemes.com/)",
-    "_comment": "We kindly appreciate it if you retain the theme copyright. Thank you for supporting Getastrothemes!"
+    "copyright": "© 2023 Moniré. All rights reserved."
   }
 }
