--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -13,6 +13,6 @@
     "legal": "Legal",
     "contact": "Contact",
     "description": "Custom website development and AI-powered workflow automation in Switzerland.",
-    "copyright": "© 2023 Moniré. All rights reserved."
+    "copyright": "© {{ year }} Moniré. All rights reserved."
   }
 }
