--- a/src/content/pages/english/privacy-policy.mdx
+++ b/src/content/pages/english/privacy-policy.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Privacy Policy"
-metaDescription: This is a example description
+metaDescription: "Privacy Policy outlining how we collect, use, and protect data at Moniré."
 draft: false
 ---
 
@@ -8,7 +8,7 @@ import contact from "../../../config/contact.json";
 
 **Effective Date: January, 2025**
 
-This Privacy Policy explains how Moniré (“we”, “our”, “us”) collects, uses, and protects your information when you visit our website or interact with our services.
+This Privacy Policy explains how {contact.companyName} (“we”, “our”, “us”) collects, uses, and protects your information when you visit our website or interact with our services.
 
 ### Information We Collect
 
