--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -11,7 +11,7 @@
   "cookie": {
     "message": "We use cookies to analyze traffic and improve your experience.",
     "learnMore": "Learn more",
-    "policyUrl": "/privacy-policy/",
+    "policyUrl": "/privacy-policy",
     "accept": "Accept",
     "reject": "Reject"
   },
