remove reminaing upstart refs

--- a/src/content/pages/french/privacy-policy.mdx
+++ b/src/content/pages/french/privacy-policy.mdx
@@ -1,93 +1,87 @@
 ---
-title: "Politique de confidentialit "
-description: "Ceci est un exemple de description m ta"
+title: "Privacy Policy"
+metaDescription: "Privacy Policy outlining how we collect, use, and protect data at Moniré."
 draft: false
 ---
 
-**Effective Date: July, 2022**
+import contact from "../../../config/contact.json";
 
-Welcome to Upstart ("we," "our," or "us"). Your privacy is important to us, and we are committed to protecting the personal information you share with us. This Privacy Policy explains how we collect, use, and safeguard your information when you visit our website, https://www.upstart.com ("Website").
+**Effective Date: January, 2025**
+
+This Privacy Policy explains how {contact.companyName} (“we”, “our”, “us”) collects, uses, and protects your information when you visit our website or interact with our services.
 
 ### Information We Collect
 
-We collect two types of information from you:
+We collect the following types of information:
 
-- **Personal Information:**
-  - Name
-  - Email address
-  - Billing information (e.g., credit card details)
-  - Any information you provide voluntarily through forms, surveys, or account creation
+- **Usage Data:**
+  Through Google Analytics, we collect anonymised website usage information such as device type, browser, pages visited, time spent on pages, and general location (city or region). This data does not identify you personally.
 
-- **Non-Personal Information:**
-  - IP address
-  - Browser type
-  - Operating system
-  - Pages visited and time spent on our site
-  - Referring website
+- **Contact form data:**
+  When you submit our contact form, we collect your name, email address, and any additional information you choose to provide.
+
+- **Client brief form downloads:**
+  When you click to download our client brief form, we may track anonymous analytics data (e.g., number of downloads). We do not collect personal information unless you later send the completed brief back to us.
 
 ### How We Use Your Information
 
-We use the information we collect for the following purposes:
+We use your information to:
 
-- To provide and improve our services
-- To process transactions and send receipts
-- To send you updates, promotions, and service-related communications
-- To personalize your experience on our Website
-- To comply with legal obligations
-- To detect and prevent fraudulent activity
+- Improve our website and user experience.
+- Respond to your inquiries and communicate with you.
+- Review information you voluntarily provide in a client brief form to prepare proposals or services.
+- Maintain website performance, analytics, and security.
 
-### Cookies and Tracking Technologies
+### Legal Basis for Processing
 
-We use cookies and similar tracking technologies to enhance your experience on our Website. These include:
+If you are located in the EU/EEA, the UK, or another GDPR-relevant region, we process your data based on:
 
-- **Essential Cookies:** Required for the operation of our Website.
-- **Performance Cookies:** Help us understand how you use our site.
-- **Marketing Cookies:** Track your browsing behavior for targeted advertising.
+- Your consent when you submit a contact form or provide information for project discussions.
+- Legitimate interests for analytics, website optimisation, and security.
+- Contractual necessity when communicating with you about potential or ongoing work.
+- You can control cookies through your browser settings.
 
-You can control cookies through your browser settings.
+### Cookies and Google Analytics
 
-### Sharing of Information
+Our website uses Google Analytics, which may set cookies in your browser to help us understand how visitors use our site.
+Google Analytics collects anonymised usage data only. You can opt out of Google Analytics at any time by using the Google Analytics Opt-out Browser Add-on.
 
-We do not sell, rent, or trade your personal information. However, we may share your information with:
+### Data Storage and Security
 
-- **Service Providers:** Third-party companies that help us operate our Website and provide services.
-- **Legal Authorities:** When required by law or to protect our rights and property.
-- **Business Transfers:** In case of a merger, acquisition, or sale of assets.
+We store personal data securely and restrict access to authorised persons only. We keep your data only for as long as necessary for the purposes outlined in this policy. We do not sell or rent your personal information.
 
-### Data Security
+### Sharing Your Information
 
-We implement industry-standard security measures to protect your data. However, no method of transmission over the Internet or electronic storage is 100% secure. While we strive to use commercially acceptable means to protect your personal information, we cannot guarantee absolute security.
+We may share information only when:
 
-### Your Rights
+- Required by law.
+- Necessary to respond to enquiries (for example, using email service providers).
+- Needed to deliver requested services, such as preparing a proposal.
 
-Depending on your location, you may have the following rights regarding your personal information:
+We do not share your information with third parties for marketing purposes.
 
-- Access your data
-- Correct or update your data
-- Request deletion of your data
-- Restrict processing of your data
-- Withdraw consent for data usage
+### Your Data Rights (GDPR Regions)
 
-To exercise your rights, please contact us at privacy@upstart.com.
+You have the right to:
 
-### Third-Party Links
+- Request access to the data we hold about you.
+- Ask for corrections or deletion.
+- Withdraw your consent at any time.
+- Request restriction of processing.
+- Request data portability.
 
-Our Website may contain links to third-party websites. We are not responsible for the privacy practices of these websites. We encourage you to review their privacy policies before providing any personal information.
+To exercise these rights, contact us at:
+**<a href={`mailto:${contact.email}`}>{contact.email}</a>**.
 
-### Children's Privacy
+### Links to Other Website
 
-Our Website is not intended for individuals under the age of 13. We do not knowingly collect personal information from children under 13. If you believe we have collected such information, please contact us immediately.
+Our website may include external links. We are not responsible for their content or privacy practices.
 
 ### Changes to This Privacy Policy
 
-We may update this Privacy Policy from time to time. Any changes will be posted on this page with an updated "Effective Date." We encourage you to review this Privacy Policy periodically.
+We may update this Privacy Policy from time to time. The latest version will always be available on this page.
 
 ### Contact Us
 
-If you have any questions or concerns about this Privacy Policy, please contact us at:
-
-Upstart
-Email: privacy@upstart.com
-Address: 123 Upstart Lane, Imaginary City, IC 12345, USA
-
-Thank you for trusting Upstart with your personal information!
+For any questions about this Privacy Policy or your data rights, you can contact us at:
+**<a href={`mailto:${contact.email}`}>{contact.email}</a>**.
