--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -16,9 +16,9 @@
     "reject": "Reject"
   },
   "footer": {
-    "company": "Company",
-    "legal": "Legal",
+    "company": "Liens rapides",
     "contact": "Contact",
+    "privacyPolicy": "Politique de confidentialité",
     "description": "Custom website development and AI-powered workflow automation in Switzerland.",
     "copyright": "© {{ year }} Moniré. All rights reserved."
   }
