--- a/src/content/pages/french/privacy-policy.mdx
+++ b/src/content/pages/french/privacy-policy.mdx
@@ -2,6 +2,7 @@
 title: "Privacy Policy"
 metaDescription: "Privacy Policy outlining how we collect, use, and protect data at Moniré."
 draft: false
+theme: "darkTeal"
 ---
 
 import contact from "../../../config/contact.json";
