--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -19,6 +19,7 @@
     "company": "Quick Links",
     "contact": "Contact",
     "privacyPolicy": "Privacy Policy",
+    "servingClientsWorldwide": "Serving clients worldwide",
     "description": "Custom website development and AI-powered workflow automation in Switzerland.",
     "copyright": "© {{ year }} Moniré. All rights reserved."
   }
