fix accessibility issues

--- a/src/content/pages/english/privacy-policy.mdx
+++ b/src/content/pages/english/privacy-policy.mdx
@@ -72,7 +72,7 @@ You have the right to:
 - Request data portability.
 
 To exercise these rights, contact us at:
-<a href={`mailto:${contact.email}`}>{contact.email}</a>.
+<a href={`mailto:${contact.email}`} aria-label="Email Moniré regarding your data rights">{contact.email}</a>.
 
 ### Links to Other Website
 
@@ -85,4 +85,4 @@ We may update this Privacy Policy from time to time. The latest version will alw
 ### Contact Us
 
 For any questions about this Privacy Policy or your data rights, you can contact us at:
-<a href={`mailto:${contact.email}`}>{contact.email}</a>.
+<a href={`mailto:${contact.email}`} aria-label="Email Moniré with privacy policy questions">{contact.email}</a>.
