--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -10,7 +10,7 @@
   },
   "cookie": {
     "message": "We use cookies to analyze traffic and improve your experience.",
-    "learnMore": "Learn more",
+    "learnMore": "Read our privacy policy",
     "policyUrl": "/privacy-policy",
     "accept": "Accept",
     "reject": "Reject"
